--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -62,7 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          padding-left: 20px; 
       }
 
-      .title{
+      .title.mobile{
         padding: 10px;
         text-align: center;
       }
