--- a/src/my-schedule.html
+++ b/src/my-schedule.html
@@ -47,7 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="hour">{{calcString("programmaora1", langPath, lingua)}}</span>
           <span class="text">{{calcString("programmacont1", langPath, lingua)}}</span>
           <div class="details" hidden$={{hiddenDetails}}>
-            <span>ecco il primo evento dell'evento, sarà una figata pazzesca, suonera sto cazzo</span>
+            <span>ecco il primo evento dell'evento, sarà una figata pazzesca, suonera sto cavolo</span>
             <img src="../images/gruppo.jpg" />
           </div>
         </div>
@@ -55,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="hour">{{calcString("programmaora2", langPath, lingua)}}</span>
           <span class="text">{{calcString("programmacont2", langPath, lingua)}}</span>
           <div class="details" hidden$={{hiddenDetails}}>
-            <span>ecco il primo evento dell'evento, sarà una figata pazzesca, suonera sto cazzo</span>
+            <span>ecco il primo evento dell'evento, sarà una figata pazzesca, suonera sto cavolo</span>
             <img src="../images/gruppo.jpg" />
           </div>
       </div>
@@ -63,7 +63,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="hour">{{calcString("programmaora3", langPath, lingua)}}</span>
           <span class="text">{{calcString("programmacont3", langPath, lingua)}}</span>
           <div class="details" hidden$={{hiddenDetails}}>
-            <span>ecco il primo evento dell'evento, sarà una figata pazzesca, suonera sto cazzo</span>
+            <span>ecco il primo evento dell'evento, sarà una figata pazzesca, suonera sto cavolo</span>
             <img src="../images/gruppo.jpg" />
           </div>
         </div>
