--- a/src/my-where.html
+++ b/src/my-where.html
@@ -48,6 +48,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <span>{{calcString("dovetitolo3cont7", langPath, lingua)}}</span>
       <span>{{calcString("dovetitolo3cont8", langPath, lingua)}}</span>
       <span>{{calcString("dovetitolo3cont9", langPath, lingua)}}</span>
+    </div>
   </template>
 
   <script>
