--- a/src/my-list.html
+++ b/src/my-list.html
@@ -33,6 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <span>{{calcString("listacont1", langPath, lingua)}}</span>
       <span>{{calcString("listacont2", langPath, lingua)}}</span>
       <span>{{calcString("listacont3", langPath, lingua)}}</span>
+    </div>
   </template>
 
   <script>
