--- a/src/my-login.html
+++ b/src/my-login.html
@@ -88,7 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               this.password = this.invitati[i].password;
               this.$.loginDialog.close();
                
-              if(this.invitati[i].password.includes("asd"))
+              if(this.invitati[i].password.indexOf("asd") != -1)
               {
                 setTimeout(function(){
                   this.set("statusKnown", "FULL");
