--- a/src/my-invitati.html
+++ b/src/my-invitati.html
@@ -29,6 +29,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       td{
         border-right: 1px solid grey;
       }
+
+      .form{
+        width: 95%;
+        background: white;
+        padding: 10px;
+        border-radius: 4px;
+        border: 4px solid;
+        border-color: var(--app-primary-color);
+        color: black;
+        margin-top: 20px;
+      }
     </style>
 
 
@@ -47,8 +58,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
       <h3 class="page-title">{{calcString("invitati", langPath, lingua)}}</h3>
       <div>{{calcString("emma", langPath, lingua)}}</div>
-
-      <paper-input label='{{calcString("nome", langPath, lingua)}}' id="nome"></paper-input>
+      <div class="form">
+        <paper-input label='{{calcString("nome", langPath, lingua)}}' id="nome"></paper-input>
       <paper-input label="Email" id="email"></paper-input>
       <paper-dropdown-menu label='{{calcString("lingua", langPath, lingua)}}'>
         <paper-listbox class="dropdown-content" selected="0" id="lingua">
@@ -62,6 +73,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-item>Party</paper-item>
         </paper-listbox>
       </paper-dropdown-menu>
+      </div>
+      
       <div>
       <button raised on-tap="addInvitato">+</button>
       <button raised on-tap="toggleDelete">Show/Hidden Delete</button>
@@ -75,6 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <table>
           <tr>
             <th></th>
+            <th></th>
             <th>{{calcString("nome", langPath, lingua)}}</th>
             <th>Email</th>
             <th>{{calcString("invito", langPath, lingua)}}</th>
@@ -84,6 +98,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <template is="dom-repeat" items="{{invitati}}" as="invitato" filter="{{computeFilter(searchString)}}">
           <tr>
             <td><button raised on-tap="deleteInvitato" hidden$={{!showDelete}}>X</button></td>
+            <td><button raised on-tap="creaEmail" hidden$={{!showDelete}}>EMAIL</button></td>
             <td>{{invitato.nome}}</td>
             <td>{{invitato.email}}</td>
             <td>{{invitato.invito}}</td>
@@ -94,6 +109,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </table>
 
     </div>
+
+
+    <paper-dialog  id="emailDialog" entry-animation="scale-up-animation"
+              exit-animation="fade-out-animation">
+      <div>
+        <span>Oggetto: </span><span id="oggetto"></span>
+      </div>
+       <div>
+        <span>Email: </span><span id="testoemail"></span>
+      </div>
+       <div>
+        <span>Password: </span><input type="text" id="testopassword" readonly="readonly"></span>
+      </div>
+      <div class="buttons">
+        <paper-button dialog-dismiss>{{calcString("pulsantechiudi", langPath, lingua)}}</paper-button>
+      </div>
+    </paper-dialog>
 
 
   </template>
@@ -147,6 +179,34 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       deleteInvitato: function(e){
         fb.database().ref().child('invitati/' + e.model.invitato.$key).remove();
+      },
+
+      creaEmail: function(e){
+
+          var isPlural = e.model.invitato.nome.indexOf('&') != -1;
+
+          this.$.oggetto.innerHTML = 'A ' + e.model.invitato.nome;
+          if(!isPlural){
+            this.$.testoemail.innerHTML = "Ciao sei mega invitato!";
+          } else{
+            this.$.testoemail.innerHTML = "Ciao siete mega invitati!";
+          }
+          
+          this.$.testopassword.value =e.model.invitato.password;
+
+          this.$.emailDialog.open();
+
+      },
+
+      copyPsw: function(){
+
+        // console.log('copying password');
+
+        // console.log(this.$$('#testopassword'));
+
+        // this.$$('#testopassword').focus();
+        // this.$$('#testopassword').select();
+        // document.execCommand('copy', true, 'asd');
       },
 
     calcString: function(campo, path, lingua){
