modifiche varia, aggiunta seziona alloggi, aggiunta mappa

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -252,7 +252,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <!--<a name="risposte" href="/risposte">risposte</a>-->
           <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
           <a name="list" href="/list">{{calcString("lista", langPath, lingua)}}</a>
-          <a name="view1" href="/view1">Alloggi/Hotel/BNB</a>
+          <a name="hotel" href="/hotel">Alloggi/Hotel/BNB</a>
           <a name="contatti" href="/contatti">{{calcString("contattititolo", langPath, lingua)}}</a>
           <a name="invito" href="/invito">{{calcString("invitomenu", langPath, lingua)}}</a>
         </iron-selector>
@@ -267,7 +267,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="schedule" href="/schedule">{{calcString("programma", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
           <a name="list" href="/list">{{calcString("lista", langPath, lingua)}}</a>
-          <a name="view1" href="/view1">Alloggi/Hotel/BNB</a>
+          <a name="hotel" href="/hotel">Alloggi/Hotel/BNB</a>
           <a name="contatti" href="/contatti">{{calcString("contattititolo", langPath, lingua)}}</a>
           <a name="invito" href="/invito">{{calcString("invitomenu", langPath, lingua)}}</a>
           
@@ -315,6 +315,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-combriccola name="combriccola"  lingua="{{lingua}}" lang-path="{{langPath}}" ></my-combriccola>
           <my-contatti name="contatti"  lingua="{{lingua}}" lang-path="{{langPath}}" ></my-contatti>
           <my-invito name="invito"  lingua="{{lingua}}" status="{{status}}" lang-path="{{langPath}}" ></my-invito>
+          <my-hotel name="hotel"  lingua="{{lingua}}" status="{{status}}" lang-path="{{langPath}}" ></my-invito>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
