--- a/src/my-combriccola.html
+++ b/src/my-combriccola.html
@@ -69,7 +69,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>{{calcString("combriccolatestomonica2", langPath, lingua)}}</span>
           </div>
           <div>
-            <img src="../images/donnachebeve.jpg"/>
+            <img src="../images/monica-calice.jpeg"/>
           </div>
         </div>
         <div>
@@ -102,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>{{calcString("combriccolatestosimone2", langPath, lingua)}}</span>
           </div>
           <div>
-            <img src="../images/uomochebeve.jpg"/>
+            <img src="../images/simo-calice.jpeg"/>
           </div>
         </div>
         
