--- a/src/my-proposal.html
+++ b/src/my-proposal.html
@@ -96,8 +96,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       openDialog: function(e){
-        this.fotoSrc = e.target.src.replace(".jpg","_full.jpg"); 
-        this.$.photoDialog.openDialog();
+        // this.fotoSrc = e.target.src.replace(".jpg","_full.jpg"); 
+        // this.$.photoDialog.openDialog();
       },
 
       closeDialog: function(){
