inserita pagina per saluti (incompleta)

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -256,6 +256,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="contatti" href="/contatti">{{calcString("contattititolo", langPath, lingua)}}</a>
           <a name="invito" href="/invito">{{calcString("invitomenu", langPath, lingua)}}</a>
           <a name="upload" href="/upload">{{calcString("uploadmenu", langPath, lingua)}}</a>
+          <a name="saluti" href="/saluti">{{calcString("saluti", langPath, lingua)}}</a>
         </iron-selector>
         </template>
 
@@ -272,7 +273,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="contatti" href="/contatti">{{calcString("contattititolo", langPath, lingua)}}</a>
           <a name="invito" href="/invito">{{calcString("invitomenu", langPath, lingua)}}</a>
           <a name="upload" href="/upload">{{calcString("uploadmenu", langPath, lingua)}}</a>
-          
+          <a name="saluti" href="/saluti">{{calcString("saluti", langPath, lingua)}}</a>
         </iron-selector>
         </template>
 
@@ -319,6 +320,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-invito name="invito"  lingua="{{lingua}}" status="{{status}}" lang-path="{{langPath}}" ></my-invito>
           <my-hotel name="hotel"  lingua="{{lingua}}" status="{{status}}" lang-path="{{langPath}}" ></my-hotel>
           <my-upload name="upload"  lingua="{{lingua}}" status="{{status}}" lang-path="{{langPath}}" ></my-upload>
+          <my-saluti name="saluti"  lingua="{{lingua}}" status="{{status}}" lang-path="{{langPath}}" ></my-saluti>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
