--- a/src/my-app.html
+++ b/src/my-app.html
@@ -40,7 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --app-card-margin: 24px 10%;
         --app-card-padding: 16px;
         --app-card-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-        --app-background:  url("../images/sfondo3.jpg");
+        --app-background:  url("../images/sfondo_pasqua.jpg");
         height: 100vh;
         display: block;
         background:  var(--app-background);    /*url("../images/sfondo3.jpg");  */
@@ -389,7 +389,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             this.customStyle['--app-card-box-shadow'] = 'none;';
          this.updateStyles();
         }else{
-           this.customStyle['--app-background'] = 'url("../images/sfondo3.jpg");';
+           this.customStyle['--app-background'] = 'url("../images/sfondo_pasqua.jpg");';
            this.customStyle['--app-card-background'] = 'rgba(8,6,6,0.69);';
            this.customStyle['--app-card-color'] = 'white;';
            this.customStyle['--app-card-margin'] = '24px 10%;';
