--- a/src/my-proposal.html
+++ b/src/my-proposal.html
@@ -64,11 +64,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <span>{{calcString("propostacont6", langPath, lingua)}}</span>
       <!--<template is="dom-if" if="{{desktop}}">-->
       <div class="photo-container">
-        <img src="../images/klagenfurt/emma.jpg" on-tap="openDialog"/>
-        <img src="../images/klagenfurt/alberi1.jpg" on-tap="openDialog"/>
+        
+        <img src="../images/klagenfurt/k3.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k4.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k5.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k1.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k6.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k7.jpg" on-tap="openDialog"/>
         <img src="../images/klagenfurt/noi.jpg" on-tap="openDialog"/>
-        <img src="../images/klagenfurt/alberi1.jpg" on-tap="openDialog"/>
-        <img src="../images/klagenfurt/bestie.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k8.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k9.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k10.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k11.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k12.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k13.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k14.jpg" on-tap="openDialog"/>
+        <img src="../images/klagenfurt/k15.jpg" on-tap="openDialog"/>
       </div>
       <!--</template>-->
     </div>
