--- a/src/my-schedule.html
+++ b/src/my-schedule.html
@@ -42,7 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div id="full" hidden$="{{!pranzoFormVisible}}">
         <h3 class="page-title">{{calcString("programmatitolo1", langPath, lingua)}}</h3>
         <div>{{calcString("programmatitoloorari", langPath, lingua)}}</div>
-        <button on-tap="showDetail">Mostra Dettagli</button>
+        <!--<button on-tap="showDetail">Mostra Dettagli</button>-->
         <div>
           <span class="hour">{{calcString("programmaora1", langPath, lingua)}}</span>
           <span class="text">{{calcString("programmacont1", langPath, lingua)}}</span>
