--- a/src/my-invito.html
+++ b/src/my-invito.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="cards">
-      <iframe hidden$={{!calcStatus(status.invite)}} src="{{calcPath(status.invite)}}"></iframe>
+      <iframe hidden$={{!calcStatus(status.invite)}} src="{{calcPath(status.invite)}}" name="invite"></iframe>
     </div>
   </template>
 
