modifica nome immagini

--- a/src/my-saluti.html
+++ b/src/my-saluti.html
@@ -56,7 +56,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h3 class="page-title">Lascia un saluto agli sposi</h3>
         <div class="form">
           <paper-textarea label="Messaggio" id="messaggio" required error-message="Required input!"></paper-textarea>
-          <paper-input label="Firma" id="firma" required  error-message="Required input!"></paper-input>
+          <paper-input label="Nome" id="firma" required  error-message="Required input!"></paper-input>
         </div>
         <paper-button raised label="Firma" on-tap="salvamessaggio">Invia</paper-button>
       </div>
