sistemati font per browser stronzi

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -84,7 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-radius: 0px 5px 5px 0px;
         transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s, color ease 0.2s;
         max-height: 40px;
-        font-family: 'Bebas Neue';
+        font-family: 'Bebas Neue','Impact';
         font-size: 24px;
         margin-right: 10px;
       }
@@ -114,7 +114,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-radius: 0px 5px 5px 0px;
         transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s, color ease 0.2s;
         max-height: 40px;
-        font-family: 'Bebas Neue';
+        font-family: 'Bebas Neue','Impact';
         font-size: 24px;
       }
 
@@ -183,12 +183,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .title h1{
         font-style: italic;
         color: var(--app-primary-color);
-        font-family: 'Pacifico';
+        font-family: 'Pacifico','Bebas Neue','Impact';
         font-size: 40px;
       }
 
       .title h2, .title h3{
-          font-family: 'Colaborate Bold';
+          font-family: 'Colaborate Bold','Tahoma';
           padding: 0px 10px;
       }
 
