--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -71,7 +71,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .ringraziamento{
         font-size:30px;
-        font-family: Pacifico;
+        font-family: 'Pacifico','Bebas Neue','Impact';
         margin-top: 40px;
         text-shadow: 4px 4px 15px #aaa;
        /* position: fixed;  */
