--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -24,7 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 17px;
         line-height: 1.8;
         /*font-style: italic; */
-        font-family: 'Colaborate Regular';
+        font-family: 'Colaborate Regular','Helvetica';
       }
       
 
@@ -54,7 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .page-title{
          background: rgba(200,200,200,0.7);
          color: var(--app-primary-color);
-         font-family: 'Colaborate Bold';
+         font-family: 'Colaborate Bold','Tahoma';
          font-size: 32px;
          border-left: 7px solid;
          border-color: var(--app-primary-color);
@@ -77,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .title h2, .title h3{
-          font-family: 'Colaborate Bold';
+          font-family: 'Colaborate Bold','Tahoma';
       }
 
 
